--- a/myCSS.css
+++ b/myCSS.css
@@ -4,14 +4,14 @@ body {
 	margin: 0 auto;
 }
 .homePage {
-	background: #CFCAFA;
+	background: #000000;
 }
 .container {
 	width: 960px;
 	margin: 0 auto;
 }
 .header {
-	background: #8DA1EB;
+	background: #191FEB;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
@@ -21,7 +21,7 @@ body {
 	
 }
 .nav {
-	background: #8674D4;
+	background: #E9F8FS;
 	margin: 0px;
 	padding: 5;
 	float: left;
@@ -30,7 +30,7 @@ body {
 	text-align: center;
 }
 .content {
-	background: #A1C0D4;
+	background: #F2E93D;
 	margin: 0px;
 	float: left;
 	width: 100%;
@@ -38,7 +38,7 @@ body {
 	text-align: center;
 }
 .footer {
-	background: #9A6DF7;
+	background: #E9F8FS;
 	margin: 0px;
 	float: left;
 	width: 100%;
