--- a/myCSS.css
+++ b/myCSS.css
@@ -21,7 +21,7 @@ body {
 	
 }
 .nav {
-	background: #F569DC;
+	background: #F5462C;
 	margin: 0px;
 	padding: 5;
 	float: left;
@@ -38,7 +38,7 @@ body {
 	text-align: center;
 }
 .footer {
-	background: #F569DC;
+	background: #F5462C;
 	margin: 0px;
 	float: left;
 	width: 100%;
