--- a/myCSS.css
+++ b/myCSS.css
@@ -4,14 +4,14 @@ body {
 	margin: 0 auto;
 }
 .homePage {
-	background: #000000;
+	background: #9D9591;
 }
 .container {
 	width: 960px;
 	margin: 0 auto;
 }
 .header {
-	background: #191FEB;
+	background: #597C85;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
@@ -21,7 +21,7 @@ body {
 	
 }
 .nav {
-	background: #F5462C;
+	background: #852424;
 	margin: 0px;
 	padding: 5;
 	float: left;
@@ -30,7 +30,7 @@ body {
 	text-align: center;
 }
 .content {
-	background: #F2E93D;
+	background: #D1C8B5;
 	margin: 0px;
 	float: left;
 	width: 100%;
@@ -38,7 +38,7 @@ body {
 	text-align: center;
 }
 .footer {
-	background: #F5462C;
+	background: #852424;
 	margin: 0px;
 	float: left;
 	width: 100%;
