--- a/myCSS.css
+++ b/myCSS.css
@@ -33,9 +33,9 @@ body {
 	background: #D1C8B5;
 	margin: 10px;
 	float: left;
-	padding: 10px;
+	padding: 10                       ;
 	width: 100%;
-	text-align: center;
+	text-align: left;
 }
 .footer {
 	background: #852424;
