--- a/myCSS.css
+++ b/myCSS.css
@@ -11,7 +11,7 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #597C85;
+	background: #1780E6;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
