--- a/myCSS.css
+++ b/myCSS.css
@@ -4,7 +4,7 @@ body {
 	margin: 0 auto;
 }
 .homePage {
-	background: #9D9591;
+	background: #1F1F1F;
 }
 .container {
 	width: 960px;
@@ -21,7 +21,7 @@ body {
 	
 }
 .nav {
-	background: #852424;
+	background: #E61A7C;
 	margin: 0px;
 	padding: 5;
 	float: left;
@@ -30,7 +30,7 @@ body {
 	text-align: center;
 }
 .content {
-	background: #D1C8B5;
+	background: #B145EB;
 	margin: 10px;
 	float: left;
 	padding: 10                       ;
@@ -38,7 +38,7 @@ body {
 	text-align: left;
 }
 .footer {
-	background: #852424;
+	background: #E61A7C;
 	margin: 0px;
 	float: left;
 	width: 100%;
