--- a/myCSS.css
+++ b/myCSS.css
@@ -11,7 +11,7 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #1780E6;
+	background: #1B5F9E;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
@@ -21,7 +21,7 @@ body {
 	
 }
 .nav {
-	background: #E61A7C;
+	background: #9C2A99;
 	margin: 0px;
 	padding: 5;
 	float: left;
@@ -30,7 +30,7 @@ body {
 	text-align: center;
 }
 .content {
-	background: #B145EB;
+	background: #B0BCFF;
 	margin: 10px;
 	float: left;
 	padding: 10                       ;
@@ -38,7 +38,7 @@ body {
 	text-align: left;
 }
 .footer {
-	background: #E61A7C;
+	background: #9C2A99;
 	margin: 0px;
 	float: left;
 	width: 100%;
